add delete row stabile

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -35,7 +35,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div ng-if="programRun.icpc2_nakaz74.editObj"
+	<div ng-if="programRun.icpc2_nakaz74.editObj_id"
 	 class="w3-card"
 	>
 	<span class="w3-btn w3-border"
