--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -1,7 +1,13 @@
 <div ng-controller="ControllerApp1">
-
+<a class="w3-hover-light-gray" title="" href="/v/info"><i class="fa fa-arrow-up"></i></a>
 	<a class="w3-hover-light-gray" title="" href="/"> <i
-		class="fa fa-home"></i></a> icpc2-test1.html
+		class="fa fa-home"></i></a>
+		:// icpc2_test
+
+<span> <b class="w3-small">форма 74</b>
+    : <a href="/v/icpc2_test"> введеня даних</a> | <a
+    href="/v/icpc2_test_report"> звіт </a>
+  </span>
 
 	<div>
 {{programRun.icpc2_nakaz74.messages.tableName}}
