--- a/src/main/resources/static/f/eh1/info1/test1/f74_day_count.html
+++ b/src/main/resources/static/f/eh1/info1/test1/f74_day_count.html
@@ -8,7 +8,7 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="countObject in f74_day_count.list">
-				<td class="w3-border-bottom">{{countObject.created|date:'mediumDate'}}</td>
+				<td class="w3-border-bottom">{{countObject.createdDay|date:'mediumDate'}}</td>
 				<td class=" w3-center w3-border-bottom">{{countObject.cnt}}</td>
 			</tr>
 		</tbody>
