консультація вдома в селі - звіт

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -5,7 +5,7 @@
 		:// icpc2_test
 
 <span> <b class="w3-small">форма 74</b>
-    : <a href="/v/icpc2_test"> введеня даних</a> | <a
+    : <a href="/v/icpc2_test2"> введеня даних</a> | <a
     href="/v/icpc2_test_report"> звіт </a>
   </span>
 
