--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_test_report.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_test_report.html
@@ -4,7 +4,7 @@
 		href="/"> <i class="fa fa-home"></i></a> :// icpc2_test_report
 
   <span> <b class="w3-small">форма 74</b>
-		: <a href="/v/icpc2_test"> введеня даних</a> | <a
+		: <a href="/v/icpc2_test2"> введеня даних</a> | <a
 		href="/v/icpc2_test_report"> звіт </a>
 	</span>
 	<div class="w3-card">
