--- a/src/main/resources/static/f/eh1/info1/test1/f74_day_count.html
+++ b/src/main/resources/static/f/eh1/info1/test1/f74_day_count.html
@@ -5,6 +5,12 @@
 				<th>день</th>
 				<th>кількість</th>
 				<th>сільских</th>
+				<th>відвідувань вдома</th>
+				<th>консультація вдома в селі</th>
+			</tr>
+			<tr>
+				<td class="w3-border w3-tiny w3-center"
+					ng-repeat="t in ['A','1','2','9','10']">{{t}}</td>
 			</tr>
 		</thead>
 		<tbody>
@@ -12,6 +18,8 @@
 				<td class="w3-border-bottom" title="{{countObject.year_day}}">{{countObject.createdDay|date:'mediumDate'}}</td>
 				<td class=" w3-center w3-border-bottom">{{countObject.cnt}}</td>
 				<td class=" w3-center w3-border-bottom">{{countObject.village_10900}}</td>
+				<td class=" w3-center w3-border-bottom">{{countObject.home_9776}}</td>
+				<td class=" w3-center w3-border-bottom">{{countObject.count_col10}}</td>
 			</tr>
 		</tbody>
 	</table>
