--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_test_report.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_test_report.html
@@ -1,12 +1,5 @@
 <div ng-controller="ControllerApp1">
-	<a class="w3-hover-light-gray" title="" href="/v/info"><i
-		class="fa fa-arrow-up"></i></a> <a class="w3-hover-light-gray" title=""
-		href="/"> <i class="fa fa-home"></i></a> :// icpc2_test_report
-
-  <span> <b class="w3-small">форма 74</b>
-		: <a href="/v/icpc2_test2"> введеня даних</a> | <a
-		href="/v/icpc2_test_report"> звіт </a>
-	</span>
+	<div ng-include="'/f/eh1/info1/test1/f74-head.html'"></div>
 	<div class="w3-card">
 		<div amd-run="programRun.f74_day_count"></div>
 	</div>
