registry employeer with email

--- a/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
@@ -41,5 +41,8 @@
 			class="w3-btn w3-border w3-round" href="/logout"> Вийти з
 				логін </a>
 		</div>
+		<div class="w3-right w3-small">
+				<a href="/v/registry1">Реєстрація в системі якщо в вас немає власного логін доступу</a>
+		</div>
 	</form>
 </div>
