build excel for month select

--- a/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
+++ b/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
@@ -12,19 +12,15 @@
 		<button class="w3-btn" ng-class="{'w3-gray':month==seekParam.month}"
 			ng-click="seekParam.setMonth(month)"
 			ng-repeat="month in [1,2,3,4,5,6,7,8,9,10,11,12]">{{month}}</button>
-		| <span class="w3-btn w3-border" title="Загрузити excel"
-			ng-click="loadExcel()"> <i class="fa fa-file-excel-o"
-			aria-hidden="true"></i>
-		</span>
-
+		| <a class="w3-btn w3-border" title="Загрузити excel"
+			ng-href="/r/excel1?data={{reportToParam()}}"><i
+			class="fa fa-file-excel-o" aria-hidden="true"></i></a>
 	</div>
 	<a href="{{seekParam.getURL()}}"
     class="w3-btn w3-border"> Пошук </a>
 	{{seekParam.year}}-{{seekParam.month}} 
 </div>
-<a ng-href="/r/excel1?data={{reportToParam()}}">
-load excel
-</a>
+
 <table>
 	<tr class="w3-small w3-gray">
 		<th ng-repeat="(k,v) in table.structure">{{v.name}}</th>
