--- a/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
+++ b/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
@@ -14,7 +14,11 @@
 			ng-repeat="month in [1,2,3,4,5,6,7,8,9,10,11,12]">{{month}}</button>
 		| <a class="w3-btn w3-border" title="Загрузити excel"
 			ng-href="/r/excel1?data={{reportToParam()}}"><i
-			class="fa fa-file-excel-o" aria-hidden="true"></i></a>
+			class="fa fa-file-excel-o" aria-hidden="true"></i></a> <a
+			href="/v/icpc2_test2_report_print"> <i class="fa fa-print"
+			aria-hidden="true"></i>
+		</a>
+
 	</div>
 	<a href="{{seekParam.getURL()}}"
     class="w3-btn w3-border"> Пошук </a>
