f74 physician seek report

--- a/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
+++ b/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
@@ -1,16 +1,19 @@
 <div ng-include="'/f/eh1/info1/test2/f74-head2.html'"></div>
 <div>
-	вибір року і місяця | вибір: 
-	<button class="w3-btn">ЛЗ</button>
-	 |
-	<button ng-click="modal.physicianChoose.display={display:'block'}" class="w3-btn"
-	ng-class="{'w3-light-gray':seekParam.physician}"
-	>
+<div class="w3-border-bottom">
+	вибір року і місяця | вибір: <a href="?" class="w3-btn"
+ ng-class="{'w3-light-gray':!seekParam.physician}">
+ЛЗ</a> |
+	<button ng-click="modal.physicianChoose.display={display:'block'}"
+		class="w3-btn" ng-class="{'w3-light-gray':seekParam.physician}">
 		лікаря</button>
 	| вибір випадки або діагнози
-	<div class="w3-small w3-border">{{seekParam.physicianData.family_name}}
+</div>
+	<div class="w3-small w3-border" ng-if="seekParam.physician">
+		<b>Лікар:</b> {{seekParam.physicianData.family_name}}
 		{{seekParam.physicianData.first_name}}
-		{{seekParam.physicianData.second_name}}</div>
+		{{seekParam.physicianData.second_name}}
+	</div>
 	<div ng-style="modal.physicianChoose.display" class="w3-modal">
 		<div class="w3-modal-content">
 			<div class="w3-container">
@@ -19,16 +22,15 @@
 				<p class="am-b">Вибір лікаря</p>
 				<div ng-repeat="p in modal.physicianChoose.data.list"
 					class="w3-hover-light-gray">
-					<a href="?physician={{p.person_id}}">
-          {{p.family_name}}
-          {{p.first_name}} {{p.second_name}}
-					</a></div>
+					<a href="?physician={{p.person_id}}"> {{p.family_name}}
+						{{p.first_name}} {{p.second_name}} </a>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div>
-		рік: <select>
+	<div class="w3-small">
+		рік: <select class="w3-btn w3-border">
 			<option value="{{year}}" ng-repeat="year in [2018,2017]"
 				ng-click="seekParam.setYear(year)"
 				ng-selected="year==seekParam.year">{{year}}</option>
