--- a/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
+++ b/src/main/resources/static/f/eh1/info1/test2/icpc2_test2_report.html
@@ -41,7 +41,7 @@
 		| <a class="w3-btn w3-border" title="Загрузити excel"
 			ng-href="/r/excel1?data={{reportToParam()}}"><i
 			class="fa fa-file-excel-o" aria-hidden="true"></i></a> <a
-			href="/v/icpc2_test2_report_print"> <i class="fa fa-print"
+			href="/v/icpc2_test2_report_print{{seekParam.getURL()}}"> <i class="fa fa-print"
 			aria-hidden="true"></i>
 		</a>
 
