--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -7,6 +7,7 @@
 		{{programRun.icpc2_nakaz74.messages.tableName}} <span
 			class="w3-btn w3-border"
 			ng-click="programRun.icpc2_nakaz74.add_row()">+</span> доктор: <select
+			class="w3-btn w3-border"
 			ng-model="f74_physician_id">
 			<option ng-repeat="(k,v) in msp_employee" value="{{k}}">
 				{{v.family_name}}</option>
