--- a/src/main/resources/static/f/eh1/info1/test1/f74-head.html
+++ b/src/main/resources/static/f/eh1/info1/test1/f74-head.html
@@ -7,7 +7,7 @@
 	<div class="w3-col l5 m5 s5">
 		<span> <b class="w3-small">форма 74</b> : <a
 			href="/v/icpc2_test2"> введеня даних</a> | <a
-			href="/v/icpc2_test_report"> звіт </a>
+			href="/v/icpc2_test2_report"> звіт </a>
 		</span>
 	</div>
 	<div class="w3-col l2 m2 s2 w3-right-align">
