f74 update/insert integer cell value

--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_col_9775.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_col_9775.html
@@ -1,4 +1,4 @@
-<div ng-repeat="(k,v) in col_values.col_9775"
+<div ng-repeat="(value,name) in col_values.col_9775"
 class="w3-hover-light-gray"
-ng-click="col_save.col_9775(k,r)"
->{{k}}: {{v}}</div>
+ng-click="col_save.col_9775(value,r)"
+>{{value}}: {{name}}</div>
