--- a/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
+++ b/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
@@ -3,6 +3,7 @@ icpc2_test3.html
 <table>
 	<thead>
 		<tr class="w3-tiny w3-gray">
+		<th style="background: white;"></th>
 			<th><i class="fa fa-calendar-o" aria-hidden="true"></i></th>
 			<th ng-repeat="c in icpc2_nakaz74.col_sort"
 				ng-init="ca=icpc2_nakaz74.col_keys[c]">{{ca}}</th>
@@ -12,6 +13,7 @@ icpc2_test3.html
 		<tr ng-repeat="r in icpc2_nakaz74.list" ng-init="row_k=$index"
 			class="w3-hover-light-gray">
 			<td>{{row_k}}</td>
+			<td>d</td>
 			<td ng-repeat="col_k in icpc2_nakaz74.col_sort"
 				class="w3-border-bottom w3-hover-shadow"
 				ng-class="{'w3-border':icpc2_nakaz74.isCellSelect(row_k, col_k)}"
@@ -23,6 +25,8 @@ icpc2_test3.html
 						ng-if="icpc2_nakaz74.isCellSelect(row_k, col_k)"
 						ng-class="{'w3-show':icpc2_nakaz74.isCellSelect(row_k, col_k)}">
 						<div class="w3-tiny w3-gray">{{ca}} — {{col_k}}</div>
+						123
+						<span ng-click="icpc2_nakaz74.closeDropdown()" class="w3-button  w3-padding-small w3-display-topright">×</span>
 						<div ng-switch-when="col_9775|and_age017_village"
 							ng-switch-when-separator="|">
 							<div ng-repeat="(value,name) in col_values[col_k]"
