f74 read ICPC2 for

--- a/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
+++ b/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
@@ -21,12 +21,18 @@ icpc2_test3.html
 				ng-init="ca=icpc2_nakaz74.col_keys[col_k];c_index=$index">
 				<div class="w3-dropdown-click">
 					{{getColValue(r, col_k)}}
-					<div class="w3-dropdown-content w3-border" ng-switch on="col_k"
+					<div class="w3-dropdown-content w3-border" 
+					ng-style="dropdown_data.ngStyle(col_k)"
+					ng-switch on="col_k"
 						ng-if="icpc2_nakaz74.isCellSelect(row_k, col_k)"
 						ng-class="{'w3-show':icpc2_nakaz74.isCellSelect(row_k, col_k)}">
 						<div class="w3-tiny w3-gray">{{ca}} — {{col_k}}</div>
-						123
-						<span ng-click="icpc2_nakaz74.closeDropdown()" class="w3-button  w3-padding-small w3-display-topright">×</span>
+						<span ng-click="icpc2_nakaz74.closeDropdown()"
+							class="w3-button  w3-padding-small w3-display-topright">×</span>
+						<div ng-switch-when="col_10766">вибір пацієнта</div>
+						<div ng-switch-default>
+							<div ng-include="'/f/eh1/info1/test3/dropdown_'+col_k+'.html'"></div>
+						</div>
 						<div ng-switch-when="col_9775|and_age017_village"
 							ng-switch-when-separator="|">
 							<div ng-repeat="(value,name) in col_values[col_k]"
