--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
@@ -1,17 +1,23 @@
-col_10771 вибір ICPC2 кода
-<div style="height: 200px; overflow: auto;">
-	<table style="width: 700px;">
-		<thead>
-			<tr class="w3-tiny w3-gray">
-				<th title="{{k}}" ng-repeat="(k,v) in dropdown_data.col_keys">
-					{{v}}</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="row in dropdown_data.list">
-				<td ng-repeat="(col_k,v) in dropdown_data.col_keys">1
-					{{row[col_k]}}</td>
-			</tr>
-		</tbody>
-	</table>
+<div>
+	<div class="w3-border-bottom">
+		<i class="fa fa-filter fa-3"></i> <input ng-model="dropdown_data.seekIcpc2"
+			placeholder="знайти ICPC2"> --
+	</div>
+
+	<div style="height: 200px; overflow: auto;">
+		<table style="width: 600px;">
+			<thead>
+				<tr class="w3-tiny w3-gray">
+					<th title="{{k}}" ng-repeat="(k,v) in dropdown_data.col_keys">
+						{{v}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="row in dropdown_data.list">
+					<td ng-repeat="(col_k,v) in dropdown_data.col_keys">
+						{{row[col_k]}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
